--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Kilo---being-the-love-story-of-Eliph-Hewlitt-book-agent_3427
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Butler, Ellis Parker
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/585
     wikipedia: http://en.wikipedia.org/wiki/Ellis_Parker_Butler
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/3427#Kilo---being-the-love-story-of-Eliph-Hewlitt-book-agent
 gutenberg_issued: '2002-09-01'
 gutenberg_type: Text
 identifiers:
